--- a/nextfire-app/package.json
+++ b/nextfire-app/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@types/react": "^17.0.38",
     "firebase": "^9.6.5",
+    "lodash.debounce": "^4.0.8",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-firebase-hooks": "^5.0.0",
     "react-hot-toast": "^2.2.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.5"
