--- a/nextfire-app/package.json
+++ b/nextfire-app/package.json
@@ -16,6 +16,7 @@
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^5.0.0",
     "react-hot-toast": "^2.2.0",
+    "react-markdown": "^8.0.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.5"
   },
