--- a/nextfire-app/package.json
+++ b/nextfire-app/package.json
@@ -8,13 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.0",
     "@types/react": "^17.0.38",
     "firebase": "^9.6.5",
     "lodash.debounce": "^4.0.8",
+    "lodash.kebabcase": "^4.1.1",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^5.0.0",
+    "react-hook-form": "^7.25.3",
     "react-hot-toast": "^2.2.0",
     "react-markdown": "^8.0.0",
     "styled-components": "^5.3.3",
